--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ __pycache__/
 
 # development stuff
 logs/
-*.swp
-*.swo
-*.pck*
+.coverage
+projdocs*
+.sessionrc
 
-# on-demand
-settings.py
+# data
+*.ntr*
